# ChessAI

./: CMakeLists.txt  README.md  main.cpp
Models/: Minimax.hpp
Models/Easy/: BOT#1(RANDOM).hpp  BOT#2(MINIMAX).hpp
Objects/Board/: Board.cpp  Board.hpp
Objects/Move/: Move.cpp  Move.hpp
Objects/Piece/: Piece.cpp  Piece.hpp
Public/: copi.txt
Settings/: Settings.cpp  Settings.hpp
